# ATANOR-VibeCode

./: .gitignore  README.md  pyproject.toml
atanor_vibecode/: __init__.py  abstraction.py  auto_curriculum.py  code_evolver.py
atanor_vibecode/tests/: test_abstraction.py  test_auto_curriculum.py  test_code_evolver.py  test_let_binding.py
scripts/: code_autocurriculum.py
